Duplicate count remain change code tommorrow

--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -334,7 +334,13 @@
       "cell_type": "code",
       "source": [
         "# Import Libraries\n",
-        "\n"
+        "\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "import warnings\n",
+        "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -354,7 +360,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "# Load Dataset\n",
+        "\n",
+        "df=pd.read_csv(\"Hotel Bookings.csv\")"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -374,7 +382,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "\n",
+        "df"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -394,7 +404,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "\n",
+        "df.shape\n"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -414,7 +426,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "\n",
+        "df.info()"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
@@ -434,7 +448,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "\n",
+        "duplicate_counts = df[df.duplicated()].value_counts()\n",
+        "\n",
+        "duplicate_counts"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
