null_value count done

--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -450,9 +450,14 @@
       "source": [
         "# Dataset Duplicate Value Count\n",
         "\n",
-        "duplicate_counts = df[df.duplicated()].value_counts()\n",
+        "duplicate_counts =df.duplicated()\n",
         "\n",
-        "duplicate_counts"
+        "print(duplicate_counts.value_counts())\n",
+        "\n",
+        "\n",
+        "        ## OR ##\n",
+        "\n",
+        "len(df[df.duplicated()])"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -472,7 +477,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "\n",
+        "null_count=df.isnull().sum()\n",
+        "null_count.sort_values(ascending=False)"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
