--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -491,7 +491,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "\n",
+        "# Checking Null Value by plotting Heatmap\n",
+        "sns.heatmap(df.isna(), cbar=False)"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
