--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -479,8 +479,11 @@
       "source": [
         "# Missing Values/Null Values Count\n",
         "\n",
-        "null_count=df.isnull().sum()\n",
-        "null_count.sort_values(ascending=False)"
+        "missing_values = df.isnull()\n",
+        "\n",
+        "missing_count=missing_values.sum()\n",
+        "\n",
+        "missing_count.sort_values(ascending=False)"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -494,7 +497,10 @@
         "# Visualizing the missing values\n",
         "\n",
         "# Checking Null Value by plotting Heatmap\n",
-        "sns.heatmap(df.isna(), cbar=False)"
+        "plt.figure(figsize=(10, 6))  # Adjust the figure size as needed\n",
+        "sns.heatmap(missing_values, cmap='viridis', cbar=False)\n",
+        "plt.title('Null Values Heatmap')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
