--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -360,9 +360,21 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "CdCG76dfvVnf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Load Dataset\n",
         "\n",
-        "df=pd.read_csv(\"Hotel Bookings.csv\")"
+        "df=pd.read_csv(\"/content/drive/MyDrive/csv/Hotel Bookings.csv\")"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -384,7 +396,7 @@
       "source": [
         "# Dataset First Look\n",
         "\n",
-        "df"
+        "df.head()"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -457,6 +469,7 @@
         "\n",
         "        ## OR ##\n",
         "\n",
+        "\n",
         "len(df[df.duplicated()])"
       ],
       "metadata": {
@@ -520,7 +533,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "\n",
+        "\"I am performing exploratory data analysis on a hotel booking dataset. The dataset contains information on reservations, customer demographics, and booking patterns. The goal is to uncover insights, trends, and potential factors influencing booking behaviors.\"\n",
+        "\n",
+        "\n",
+        "The above dataset has 119390 rows and 32 columns. There are some mising values for column [\"Company\",\"agent\",\"country\"] and 31994 duplicate values in the dataset.\n",
+        "So first Goal is to clean dataset to optimize given dataset efficiently and analyse easily.\n",
+        "\n",
+        "The following points Behind data analysis to achive Goal :\n",
+        "\n",
+        "\n",
+        "**Reservation Patterns:**\n",
+        "\n",
+        "Analyzing customer demographics involves understanding patterns in reservation behavior, including booking frequency, preferred booking channels, and typical lead times.\n",
+        "\n",
+        "**Cancellation Trends:**\n",
+        "\n",
+        "Examining demographics can reveal insights into cancellation tendencies, helping to understand which customer segments are more likely to cancel reservations and why. This information is crucial for optimizing cancellation policies and improving customer satisfaction."
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -538,7 +567,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "\n",
+        "df.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -549,7 +580,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n",
+        "\n",
+        "df.describe(include='all')"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
