--- a/Hotel_Booking_Analysis.ipynb
+++ b/Hotel_Booking_Analysis.ipynb
@@ -405,6 +405,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "df.tail()"
+      ],
+      "metadata": {
+        "id": "l10IM_X_3hAp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Dataset Rows & Columns count"
@@ -510,10 +521,13 @@
         "# Visualizing the missing values\n",
         "\n",
         "# Checking Null Value by plotting Heatmap\n",
-        "plt.figure(figsize=(10, 6))  # Adjust the figure size as needed\n",
-        "sns.heatmap(missing_values, cmap='viridis', cbar=False)\n",
+        "plt.figure(figsize=(18, 8))  # Adjust the figure size as needed\n",
+        "sns.heatmap(missing_values, cmap=sns.color_palette(colours))\n",
         "plt.title('Null Values Heatmap')\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
